# blend2d-bench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  m1.txt
src/: app.cpp  app.h  images_data.h  module.cpp  module.h  module_agg.cpp  module_agg.h  module_b2d.cpp  module_b2d.h  module_base.cpp  module_base.h  module_blend2d.cpp  module_blend2d.h  module_cairo.cpp  module_cairo.h  module_plutovg.cpp  module_plutovg.h  module_qt.cpp  module_qt.h  module_skia.cpp  module_skia.h  shapes_data.cpp  shapes_data.h
tools/: configure-vs2017-x64.bat  configure-vs2017-x86.bat
